--- a/test/booking.html
+++ b/test/booking.html
@@ -1,17 +1,38 @@
 <html><head>
+<link rel="stylesheet" href="jquery.ui.theme.css"/>
+<link rel="stylesheet" href="jquery.ui.datepicker.css"/>
 <style>
   body  { font-family: arial; }
   label { display:block; min-width: 120px; float: left; }
   li    { list-style-type: none; line-height: 2.0; }
+  .hr   { border-top:solid #000 1px; width: 380px; margin-top:8px; margin-bottom:8px; }
 </style>
 <script type='text/javascript' src='jquery-1.7.1.min.js'></script>
-<script type='text/javascript' src='jquery-ui-1.8.18.custom.min.js'></script>
+<script type='text/javascript' src='jquery-ui-1.8.18.custom-datepickeronly.min.js'></script>
 </head><body>
-  <h2>A Simple Booking Demo</h2>
+  <h2>Simple Booking Demo -- Non-Staff User</h2>
   
   <form id='booking'>
   
   <ul>
+  
+  <li>
+  <label>Choose Date</label>
+  <div id='datepicker' style="padding-top:32px; display:block;"></div>
+  </li>
+  
+  <li>
+  <label>Choose Time</label>
+  <div id='datepicker' style="padding-top:32px; display:block;"></div>
+  </li>  
+  
+  <li>
+  <label for='size'>Group size</label>
+  <input type='text' name='size'/><br/>
+  </li>
+  
+  <li class="hr"></li>
+  
   <li>
   <label for='name'>Name</label>
   <input type='text' name='name'/>
@@ -24,17 +45,26 @@
   
   <li>
   <label for='phone'>Phone</label>
-  <input type='text' name='phone'/><br/>  
+  <input type='text' name='phone'/><br/>
   </li>
   
   <li>
   <label for='iscellphone'>Is a cellphone.</label>
-  <input type='radio' name='iscellphone' value='true' selected /> Yes &mdash;
+  <input type='radio' name='iscellphone' value='true' checked /> Yes &mdash;
   <input type='radio' name='iscellphone' value='false'/> No
   </li>
   
+  <li class="hr"></li>
+  
   <li>
-  <label for='phone'>Phone</label>
+  <label>Remind me</label>
+  <input type='checkbox' name='remindViaSMS'/> via text<br/>
+  <label>&nbsp;</label>
+  <input type='checkbox' name='remindViaEmail'/> via email<br/>
+  <label>&nbsp;</label>
+  <input type='checkbox' name='remindSameDay'/> 30 min before, on the same day<br/>
+  <label>&nbsp;</label>
+  <input type='checkbox' name='remindSameWeek'/> a day before, on the same week<br/>
   </li>
   
   </ul>
@@ -52,6 +82,8 @@ function ADDEVENTS(d){
     $('#calendar').fullCalendar('renderEvent', d[i]);
 }
 
-$(document).ready(function() {
+$(document).ready(function(){
+  $( "#datepicker" ).datepicker();
+  //$('#datepicker').val()
 });
 </script></html>
