booking frontend hooked into API.

--- a/test/calendar.html
+++ b/test/calendar.html
@@ -18,6 +18,7 @@ $(document).ready(function() {
 
   $('#calendar').fullCalendar({
     
+    ignoreTimezone:false,
     defaultView:'agendaWeek',   
     
     events: function(start, end, callback) {
