--- a/test/booking.html
+++ b/test/booking.html
@@ -28,6 +28,7 @@
   <label>Choose Time</label>
   <select id='time'>
     <script>
+      // Create full list of open times.
       (function(d){
         var optionhtml="<option value='__TIMEVALUE__'>__TIME__ __AMPM__</option>";
         for(var i=11, j=0, isAM=1;i<26; i+=0.5){
@@ -62,7 +63,7 @@
   
   <li>
   <label for='size'>Group size</label>
-  <input type='text' name='size'/><br/>
+  <input type='text' id='size'/><br/>
   </li>
   
   <li class="hr"></li>
@@ -79,7 +80,7 @@
   
   <li>
   <label for='phone'>Phone</label>
-  <input type='text' id='phone'/><br/>
+  <input type='text' id='phone' maxlength='10'/><br/>
   </li>
   
   <li>
@@ -126,7 +127,9 @@ function ADDEVENTS(d){
 var BOOK={
   FAIL:function(message) { $('#responseText').text(message.text); },
   SUCCESS:function() {
-    $('#responseText').text('Booking request sent successfully!');
+    $('#responseText').text(
+      'Booking request sent successfully! We\'ll send you a confirmation email shortly!'
+    );
     $('#submit')[0].disabled=true;
     $('#reset')[0].disabled=true;
   }
@@ -158,7 +161,7 @@ function validateAndSend(){
   };
 
   for(var i in requiredFields)
-    if(!requiredFields[i].length)
+    if(!requiredFields[i] || !requiredFields[i].length)
       return alert("Missing information: "+i+"!");
     
   if(requiredFields.email.indexOf("@")==-1)
@@ -171,22 +174,29 @@ function validateAndSend(){
     return alert("Can't book a party with over 15 guests!");
 
   var d=new Date(requiredFields.date);
-  var datetime=new Date(d.getFullYear,d.getMonth,d.getDay,requiredFields.)
-
+  var t=requiredFields.time.split(':');  
+  var datetime=new Date(
+    d.getFullYear(),d.getMonth(),d.getDate(),
+    parseInt(t[0]),parseInt(t[1]),0,0
+  );
+  
+  if(datetime.valueOf()<(new Date()).valueOf())
+    return alert("Booking is set to a time in the past!");
+  
   $.ajax({
-    //url: 'http://snl-booking.appspot.com/schedule/showrange/',
-    url: 'http://localhost:8080/schedule/try/',
+    url: 'http://snl-booking.appspot.com/schedule/try/',
+    //url: 'http://localhost:8080/schedule/try/',
     dataType: 'jsonp',
     type:'POST',
     data: {
       API_KEY:            'abc',
-      iswalkin:           requiredFields.iswalkin,
+      isWalkin:           requiredFields.iswalkin,
       name:               requiredFields.name,
       email:              requiredFields.email,
       phone:              requiredFields.phone,
-      iscellphone:        requiredFields.iscellphone,
+      isCellphone:        requiredFields.iscellphone,
       size:               requiredFields.size,
-      date:               requiredFields.date,
+      date:               datetime.valueOf(),
       remindViaSameWeek:  requiredFields.remindViaSameWeek,
       remindViaSameDay:   requiredFields.remindViaSameDay,
       remindViaSMS:       requiredFields.remindViaSMS,
